--- a/02-Homework/Develop/index.html
+++ b/02-Homework/Develop/index.html
@@ -32,7 +32,7 @@
     <!-- Main content of the page -->
     <main class="content">
         <!-- Article including anchor tag id -->
-        <section id="search-engine-optimization" class="search-engine-optimization">
+        <section id="search-engine-optimization" class="main-content">
             <!-- img with alt attribute -->
             <img src="./assets/images/search-engine-optimization.jpg" 
             alt="a notebook with an SEO wordcloud written on it" class="float-left" />
@@ -43,7 +43,7 @@
                      </p>
                  </article>
         </section>
-        <section id="online-reputation-management" class="online-reputation-management">
+        <section id="online-reputation-management" class="main-content">
             <img src="./assets/images/online-reputation-management.jpg" alt="a laptop showing an graph with online reputation increasing" class="float-right" />
             <h2>Online Reputation Management</h2>
                  <article>
@@ -52,7 +52,7 @@
                      </p>
                  </article>
         </section>
-        <section id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing" class="main-content">
             <img src="./assets/images/social-media-marketing.jpg" alt="a table with social media terms and laptops placed upon it" class="float-left" />
             <h2>Social Media Marketing</h2>
                  <article>
@@ -64,21 +64,21 @@
     </main>
     <!-- Aside -->
     <aside class="benefits">
-        <section class="benefit-lead">
+        <section class="benefit-style">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="an logo with a cog flowing into a funnel with money coming out" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <section class="benefit-brand">
+        <section class="benefit-style">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="a person with a lightbulb for a head" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <section class="benefit-cost">
+        <section class="benefit-style">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="a cog surrounded by paper currency" />
             <p>
