Removed non-required files

--- a/02-Homework/Develop/index.html
+++ b/02-Homework/Develop/index.html
@@ -86,6 +86,7 @@
             </p>
         </section>
     </aside>
+    <!-- footer -->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
