--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="/02-Homework/Develop/assets/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Horiseon Marketing for your SEO, Online Reputation and Social Media Marketing needs</title>
 </head>
 
@@ -33,7 +33,7 @@
         <!-- Article including anchor tag id -->
         <section id="search-engine-optimization" class="main-content">
             <!-- img with alt attribute -->
-            <img src="/02-Homework/Develop/assets/images/search-engine-optimization.jpg" 
+            <img src="/images/search-engine-optimization.jpg" 
             alt="a notebook with an SEO wordcloud written on it" class="float-left" />
             <h2>Search Engine Optimization</h2>
                  <article>
@@ -43,7 +43,7 @@
                  </article>
         </section>
         <section id="online-reputation-management" class="main-content">
-            <img src="/02-Homework/Develop//assets/images/online-reputation-management.jpg" alt="a laptop showing an graph with online reputation increasing" class="float-right" />
+            <img src="/images/online-reputation-management.jpg" alt="a laptop showing an graph with online reputation increasing" class="float-right" />
             <h2>Online Reputation Management</h2>
                  <article>
                      <p>
@@ -52,7 +52,7 @@
                  </article>
         </section>
         <section id="social-media-marketing" class="main-content">
-            <img src="/02-Homework/Develop//assets/images/social-media-marketing.jpg" alt="a table with social media terms and laptops placed upon it" class="float-left" />
+            <img src="/images/social-media-marketing.jpg" alt="a table with social media terms and laptops placed upon it" class="float-left" />
             <h2>Social Media Marketing</h2>
                  <article>
                      <p>
@@ -65,21 +65,21 @@
     <aside class="benefits">
         <section class="benefit-style">
             <h3>Lead Generation</h3>
-            <img src="/02-Homework/Develop//assets/images/lead-generation.png" alt="an logo with a cog flowing into a funnel with money coming out" />
+            <img src="/images/lead-generation.png" alt="an logo with a cog flowing into a funnel with money coming out" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
         <section class="benefit-style">
             <h3>Brand Awareness</h3>
-            <img src="/02-Homework/Develop//assets/images/brand-awareness.png" alt="a person with a lightbulb for a head" />
+            <img src="/images/brand-awareness.png" alt="a person with a lightbulb for a head" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
         <section class="benefit-style">
             <h3>Cost Management</h3>
-            <img src="/02-Homework/Develop//assets/images/cost-management.png" alt="a cog surrounded by paper currency" />
+            <img src="/images/cost-management.png" alt="a cog surrounded by paper currency" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
